--- a/positive/index.html
+++ b/positive/index.html
@@ -83,30 +83,30 @@
     <div class="row">
         <!-- First Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100">Positive KaoEmojis </a>
+            <a href="#" class="btn btn-primary w-100">Joy KaoEmojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100">Negative KaoEmojis </a>
+            <a href="#" class="btn btn-primary w-100">Gratitude KaoEmojis </a>
         </div>
     </div>
     
     <div class="row">
         <!-- Second Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100">Neutral KaoEmojis </a>
+            <a href="#" class="btn btn-primary w-100">Pride KaoEmojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100">Various KaoEmojis </a>
+            <a href="#" class="btn btn-primary w-100">Appreciation KaoEmojis </a>
         </div>
     </div>
 
     <div class="row">
         <!-- Third Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100">Animals KaoEmojis </a>
+            <a href="#" class="btn btn-primary w-100">Interest KaoEmojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="#" class="btn btn-primary w-100">Other KaoEmojis </a>
+            <a href="#" class="btn btn-primary w-100">Peaceful KaoEmojis </a>
         </div>
     </div>
 </div>
