--- a/positive/index.html
+++ b/positive/index.html
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="https://www.getemoji.online/kaoemoji/">Home</a>
+                    <a class="nav-link active" href="https://www.getemoji.online/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.getemoji.online/">Online Emoji</a>
