--- a/player.html
+++ b/player.html
@@ -87,11 +87,11 @@ Telegram Channel
     
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7981191925382455"
      crossorigin="anonymous"></script>
-<!-- Ressponsive -->
+<!-- Res -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-7981191925382455"
-     data-ad-slot="4345862479"
+     data-ad-slot="9016560911"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
@@ -128,10 +128,11 @@ Telegram Channel
 <!--Ads-->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7981191925382455"
      crossorigin="anonymous"></script>
+<!-- Res -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-7981191925382455"
-     data-ad-slot="3536360020"
+     data-ad-slot="9016560911"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
@@ -276,15 +277,13 @@ $(document).ready(function() {$('img#closed').click(function(){$('#bl_banner').h
 <a id='close-fixedban' onclick='document.getElementById("fixedban").style.display = "none";' style='cursor:pointer;'><img alt='close' src=' https://www.rakeshtechsolutions.com/assets/img/btn_close.gif ' style='vertical-align:middle;' title='close button'/></a>
 </div>
 <div style='text-align:center;display:block;max-width:300px;height:auto;overflow:hidden;margin:auto'>
-<ins class='adsbygoogle' data-ad-client='ca-pub-7981191925382455' data-ad-slot='5912194004' style='display:inline-block;width:300px;height:250px'></ins>
+<ins class='adsbygoogle' data-ad-client='ca-pub-7981191925382455' data-ad-slot='9016560911' style='display:inline-block;width:300px;height:250px'></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
 </div>
 
-
-
-
+ 
  
 </div></div>
