--- a/player.html
+++ b/player.html
@@ -113,7 +113,7 @@ Telegram Channel
      
 <div class="disclaimer" style="text-align: center;"><b>
 <span style="color: black;"> Skip 1 Ads | Watch Peacefully </span></b></div> 
-<iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation" id="iframe" allow="encrypted-media" allowfullscreen="allowfullscreen" allowtransparency="true" frameborder="0" height="100%" marginheight="0" scrolling="no" marginwidth="0"  width="100%"></iframe> 
+<iframe id="iframe" allow="encrypted-media" allowfullscreen="allowfullscreen" allowtransparency="true" frameborder="0" height="100%" marginheight="0" scrolling="no" marginwidth="0"  width="100%"></iframe> 
 
 
  <div><br/></div>
