--- a/positive/index.html
+++ b/positive/index.html
@@ -109,7 +109,28 @@
             <a href="#" class="btn btn-primary w-100">Peaceful KaoEmojis </a>
         </div>
     </div>
+
+    <div class="row">
+        <!-- Fourth Row of 2 Buttons -->
+        <div class="col-md-6 mb-3">
+            <a href="#" class="btn btn-primary w-100">Excitement KaoEmojis </a>
+        </div>
+        <div class="col-md-6 mb-3">
+            <a href="#" class="btn btn-primary w-100">Love KaoEmojis </a>
+        </div>
+    </div>
+
+    <div class="row">
+        <!-- Fifth Row of 2 Buttons -->
+        <div class="col-md-6 mb-3">
+            <a href="#" class="btn btn-primary w-100">Confidence KaoEmojis </a>
+        </div>
+        <div class="col-md-6 mb-3">
+            <a href="#" class="btn btn-primary w-100">Surprise KaoEmojis </a>
+        </div>
+    </div>
 </div>
+
 
 
 
