--- a/positive/index.html
+++ b/positive/index.html
@@ -86,47 +86,47 @@
             <a href="/positive/joy.html" class="btn btn-primary w-100">Joy KaoEmojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="/positive/joy.html" class="btn btn-primary w-100">Gratitude KaoEmojis </a>
+            <a href="/positive/gratitude.html" class="btn btn-primary w-100">Gratitude KaoEmojis </a>
         </div>
     </div>
     
     <div class="row">
         <!-- Second Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="/positive/joy.html" class="btn btn-primary w-100">Pride KaoEmojis </a>
+            <a href="/positive/pride.html" class="btn btn-primary w-100">Pride KaoEmojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="/positive/joy.html" class="btn btn-primary w-100">Appreciation KaoEmojis </a>
+            <a href="/positive/appreciation.html" class="btn btn-primary w-100">Appreciation KaoEmojis </a>
         </div>
     </div>
 
     <div class="row">
         <!-- Third Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="/positive/joy.html" class="btn btn-primary w-100">Interest KaoEmojis </a>
+            <a href="/positive/interest.html" class="btn btn-primary w-100">Interest KaoEmojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="/positive/joy.html" class="btn btn-primary w-100">Peaceful KaoEmojis </a>
+            <a href="/positive/peaceful.html" class="btn btn-primary w-100">Peaceful KaoEmojis </a>
         </div>
     </div>
 
     <div class="row">
         <!-- Fourth Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="/positive/joy.html" class="btn btn-primary w-100">Excitement KaoEmojis </a>
+            <a href="/positive/excitment.html" class="btn btn-primary w-100">Excitement KaoEmojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="/positive/joy.html" class="btn btn-primary w-100">Love KaoEmojis </a>
+            <a href="/positive/love.html" class="btn btn-primary w-100">Love KaoEmojis </a>
         </div>
     </div>
 
     <div class="row">
         <!-- Fifth Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="/positive/joy.html" class="btn btn-primary w-100">Confidence KaoEmojis </a>
+            <a href="/positive/confidence.html" class="btn btn-primary w-100">Confidence KaoEmojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="/positive/joy.html" class="btn btn-primary w-100">Surprise KaoEmojis </a>
+            <a href="/positive/surprise.html" class="btn btn-primary w-100">Surprise KaoEmojis </a>
         </div>
     </div>
 </div>
