--- a/blank.html
+++ b/blank.html
@@ -71,7 +71,7 @@
 <!-- Header Section -->
 <header class="header">
 <h1>Welcome to Blank KaoEmojis World</h1>
-<p>Your ultimate destination for Kao Emojis, fun expressions, and creative text art!</p>
+<p>Your ultimate destination for Blank Kao Emojis, fun expressions, and creative text art!</p>
 </header>
 
 
