--- a/blank.html
+++ b/blank.html
@@ -76,7 +76,21 @@
 
 
 
+<!-- Inter Link Next Emoji -->
+<div class="container mt-6">
+    <div class="row">
+        <!-- First Row of 2 Buttons -->
+        <div class="col-md-6 mb-3">
+            <a href="/positive/next.html" class="btn btn-primary w-100">Next KaoEmojis </a>
+        </div>
+        <div class="col-md-6 mb-3">
+            <a href="/positive/next.html" class="btn btn-primary w-100">Next KaoEmojis </a>
+        </div>
+    </div>
+</div>
 
+
+    
 <!-- Emoji Grid (Unchanged) -->
 <div class="container mt-4" id="emojis">
 <h2 class="text-center mb-4">Famous Blank KaoEmojis</h2>
