--- a/index.html
+++ b/index.html
@@ -113,7 +113,18 @@
 </div>
 
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7981191925382455"
+     data-ad-slot="9016560911"
+     data-ad-format="horizontal"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script> 
 
+    
 
     <!-- SEO Content Section -->
     <div class="container mt-4 seo-content">
