--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
 </div>
 
-
+<center>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block"
@@ -123,7 +123,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script> 
-
+</center>
     
 
     <!-- SEO Content Section -->
