--- a/index.html
+++ b/index.html
@@ -143,6 +143,21 @@
         <h3>Why Kao Emojis Are So Popular</h3>
         <p>Kao Emojis have gained popularity because they allow users to express emotions in a creative, fun, and unique way. They are often used in social media posts, messages, and comments to add personality and humor. Additionally, their easy accessibility and fun nature make them a great tool for online communication.</p>
 
+
+<center>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7981191925382455"
+     data-ad-slot="9016560911"
+     data-ad-format="horizontal"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script> 
+</center>
+
+        
         <h3>How to Copy and Share Kao Emojis</h3>
         <p>On our website, you can easily copy your favorite Kao Emojis by clicking the "Copy" button next to each one. Simply paste them into your social media posts, text messages, or emails to add some flair to your conversations!</p>
 
