--- a/positive/pride.html
+++ b/positive/pride.html
@@ -75,18 +75,7 @@
 </header>
 
 
-<center>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7981191925382455"
-     data-ad-slot="9016560911"
-     data-ad-format="horizontal"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script> 
-</center>
+
 
     
 <!-- Inter Link Next Emoji -->
@@ -103,7 +92,7 @@
 </div>
 
 
-<center>
+<div class="ad-slot">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block"
@@ -114,7 +103,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script> 
-</center>
+</div>
 
 
     
