--- a/positive/pride.html
+++ b/positive/pride.html
@@ -666,69 +666,76 @@
 
 
 
-<div class="col-4">
-  <div class="emoji-box">
-    <span class="emoji" title="Proud expression Kaoemoji">(≧◡≦)</span>
-    <button onclick="copyEmoji('(≧◡≦)', this)">Copy</button>
-    <div class="copy-alert">Copied!</div>
+<div class="row">
+  <div class="col-4">
+    <div class="emoji-box">
+      <span class="emoji" title="Proud expression Kaoemoji">(≧◡≦)</span>
+      <button onclick="copyEmoji('(≧◡≦)', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class="emoji-box">
+      <span class="emoji" title="Confident pride Kaoemoji">(｡•̀ᴗ•́｡)</span>
+      <button onclick="copyEmoji('(｡•̀ᴗ•́｡)', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class="emoji-box">
+      <span class="emoji" title="Cheerful pride Kaoemoji">(*≧▽≦)</span>
+      <button onclick="copyEmoji('(*≧▽≦)', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
   </div>
 </div>
-<div class="col-4">
-  <div class="emoji-box">
-    <span class="emoji" title="Confident pride Kaoemoji">(｡•̀ᴗ•́｡)</span>
-    <button onclick="copyEmoji('(｡•̀ᴗ•́｡)', this)">Copy</button>
-    <div class="copy-alert">Copied!</div>
+<div class="row">
+  <div class="col-4">
+    <div class="emoji-box">
+      <span class="emoji" title="Prideful confident smile Kaoemoji">(￣▽￣)ゞ</span>
+      <button onclick="copyEmoji('(￣▽￣)ゞ', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class="emoji-box">
+      <span class="emoji" title="Prideful wink Kaoemoji">(* ̀⧗ ́*)</span>
+      <button onclick="copyEmoji('(* ̀⧗ ́*)', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class="emoji-box">
+      <span class="emoji" title="Victorious pride Kaoemoji">(o´∀`o)</span>
+      <button onclick="copyEmoji('(o´∀`o)', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
   </div>
 </div>
-<div class="col-4">
-  <div class="emoji-box">
-    <span class="emoji" title="Cheerful pride Kaoemoji">(*≧▽≦)</span>
-    <button onclick="copyEmoji('(*≧▽≦)', this)">Copy</button>
-    <div class="copy-alert">Copied!</div>
+<div class="row">
+  <div class="col-4">
+    <div class="emoji-box">
+      <span class="emoji" title="Happy pride Kaoemoji">( ^‿^ )</span>
+      <button onclick="copyEmoji('( ^‿^ )', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class="emoji-box">
+      <span class="emoji" title="Prideful grin Kaoemoji">(•̀⌂•́)</span>
+      <button onclick="copyEmoji('(•̀⌂•́)', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class="emoji-box">
+      <span class="emoji" title="Prideful smile Kaoemoji">(✧ω✧)</span>
+      <button onclick="copyEmoji('(✧ω✧)', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
   </div>
 </div>
-<div class="col-4">
-  <div class="emoji-box">
-    <span class="emoji" title="Prideful confident smile Kaoemoji">(￣▽￣)ゞ</span>
-    <button onclick="copyEmoji('(￣▽￣)ゞ', this)">Copy</button>
-    <div class="copy-alert">Copied!</div>
-  </div>
-</div>
-<div class="col-4">
-  <div class="emoji-box">
-    <span class="emoji" title="Prideful wink Kaoemoji">(* ̀⧗ ́*)</span>
-    <button onclick="copyEmoji('(* ̀⧗ ́*)', this)">Copy</button>
-    <div class="copy-alert">Copied!</div>
-  </div>
-</div>
-<div class="col-4">
-  <div class="emoji-box">
-    <span class="emoji" title="Victorious pride Kaoemoji">(o´∀`o)</span>
-    <button onclick="copyEmoji('(o´∀`o)', this)">Copy</button>
-    <div class="copy-alert">Copied!</div>
-  </div>
-</div>
-<div class="col-4">
-  <div class="emoji-box">
-    <span class="emoji" title="Happy pride Kaoemoji">( ^‿^ )</span>
-    <button onclick="copyEmoji('( ^‿^ )', this)">Copy</button>
-    <div class="copy-alert">Copied!</div>
-  </div>
-</div>
-<div class="col-4">
-  <div class="emoji-box">
-    <span class="emoji" title="Prideful grin Kaoemoji">(•̀⌂•́)</span>
-    <button onclick="copyEmoji('(•̀⌂•́)', this)">Copy</button>
-    <div class="copy-alert">Copied!</div>
-  </div>
-</div>
-<div class="col-4">
-  <div class="emoji-box">
-    <span class="emoji" title="Prideful smile Kaoemoji">(✧ω✧)</span>
-    <button onclick="copyEmoji('(✧ω✧)', this)">Copy</button>
-    <div class="copy-alert">Copied!</div>
-  </div>
-</div>
+
 
   
 
