--- a/positive/pride.html
+++ b/positive/pride.html
@@ -667,74 +667,98 @@
 
 
 <div class="row">
-  <div class="col-4">
+  <div class="col-3">
     <div class="emoji-box">
-      <span class="emoji" title="Proud expression Kaoemoji">(≧◡≦)</span>
+      <span class="emoji" title="Proud smile Kaoemoji">(≧◡≦)</span>
       <button onclick="copyEmoji('(≧◡≦)', this)">Copy</button>
       <div class="copy-alert">Copied!</div>
     </div>
   </div>
-  <div class="col-4">
+  <div class="col-3">
     <div class="emoji-box">
-      <span class="emoji" title="Confident pride Kaoemoji">(｡•̀ᴗ•́｡)</span>
-      <button onclick="copyEmoji('(｡•̀ᴗ•́｡)', this)">Copy</button>
+      <span class="emoji" title="Confident wink Kaoemoji">(⌒‿⌒)</span>
+      <button onclick="copyEmoji('(⌒‿⌒)', this)">Copy</button>
       <div class="copy-alert">Copied!</div>
     </div>
   </div>
-  <div class="col-4">
+  <div class="col-3">
     <div class="emoji-box">
-      <span class="emoji" title="Cheerful pride Kaoemoji">(*≧▽≦)</span>
-      <button onclick="copyEmoji('(*≧▽≦)', this)">Copy</button>
+      <span class="emoji" title="Victory pride Kaoemoji">(๑˃ᴗ˂)ﻭ</span>
+      <button onclick="copyEmoji('(๑˃ᴗ˂)ﻭ', this)">Copy</button>
       <div class="copy-alert">Copied!</div>
     </div>
   </div>
 </div>
 <div class="row">
-  <div class="col-4">
+  <div class="col-3">
     <div class="emoji-box">
-      <span class="emoji" title="Prideful confident smile Kaoemoji">(￣▽￣)ゞ</span>
-      <button onclick="copyEmoji('(￣▽￣)ゞ', this)">Copy</button>
+      <span class="emoji" title="Prideful confidence Kaoemoji">(*≧ω≦)</span>
+      <button onclick="copyEmoji('(*≧ω≦)', this)">Copy</button>
       <div class="copy-alert">Copied!</div>
     </div>
   </div>
-  <div class="col-4">
+  <div class="col-3">
     <div class="emoji-box">
-      <span class="emoji" title="Prideful wink Kaoemoji">(* ̀⧗ ́*)</span>
-      <button onclick="copyEmoji('(* ̀⧗ ́*)', this)">Copy</button>
-      <div class="copy-alert">Copied!</div>
-    </div>
-  </div>
-  <div class="col-4">
-    <div class="emoji-box">
-      <span class="emoji" title="Victorious pride Kaoemoji">(o´∀`o)</span>
+      <span class="emoji" title="Cheerful pride Kaoemoji">(o´∀`o)</span>
       <button onclick="copyEmoji('(o´∀`o)', this)">Copy</button>
       <div class="copy-alert">Copied!</div>
     </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-4">
+  <div class="col-3">
     <div class="emoji-box">
-      <span class="emoji" title="Happy pride Kaoemoji">( ^‿^ )</span>
-      <button onclick="copyEmoji('( ^‿^ )', this)">Copy</button>
-      <div class="copy-alert">Copied!</div>
-    </div>
-  </div>
-  <div class="col-4">
-    <div class="emoji-box">
-      <span class="emoji" title="Prideful grin Kaoemoji">(•̀⌂•́)</span>
+      <span class="emoji" title="Confident pride Kaoemoji">(•̀⌂•́)</span>
       <button onclick="copyEmoji('(•̀⌂•́)', this)">Copy</button>
       <div class="copy-alert">Copied!</div>
     </div>
   </div>
-  <div class="col-4">
+</div>
+<div class="row">
+  <div class="col-3">
     <div class="emoji-box">
-      <span class="emoji" title="Prideful smile Kaoemoji">(✧ω✧)</span>
+      <span class="emoji" title="Prideful joy Kaoemoji">( ￣︿￣)</span>
+      <button onclick="copyEmoji('( ￣︿￣)', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
+  </div>
+  <div class="col-3">
+    <div class="emoji-box">
+      <span class="emoji" title="Grinning with pride Kaoemoji">(* ̀⧗ ́*)</span>
+      <button onclick="copyEmoji('(* ̀⧗ ́*)', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
+  </div>
+  <div class="col-3">
+    <div class="emoji-box">
+      <span class="emoji" title="Prideful wink Kaoemoji">(ᵔᴥᵔ)</span>
+      <button onclick="copyEmoji('(ᵔᴥᵔ)', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-3">
+    <div class="emoji-box">
+      <span class="emoji" title="Bold pride Kaoemoji">( ´ ▽ ` )</span>
+      <button onclick="copyEmoji('( ´ ▽ ` )', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
+  </div>
+  <div class="col-3">
+    <div class="emoji-box">
+      <span class="emoji" title="Happy pride Kaoemoji">(☆▽☆)</span>
+      <button onclick="copyEmoji('(☆▽☆)', this)">Copy</button>
+      <div class="copy-alert">Copied!</div>
+    </div>
+  </div>
+  <div class="col-3">
+    <div class="emoji-box">
+      <span class="emoji" title="Proud wink Kaoemoji">(✧ω✧)</span>
       <button onclick="copyEmoji('(✧ω✧)', this)">Copy</button>
       <div class="copy-alert">Copied!</div>
     </div>
   </div>
 </div>
+
 
 
   
