--- a/positive/index.html
+++ b/positive/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Discover Kao Emojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!">
     <meta name="keywords" content="Kao Emojis, emoji art, text emoticons, smileys, copy emojis, fun emojis, creative text art, cute emojis">
-    <meta property="og:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
+    <meta property="og:title" content="Kaomoji - Fun and Creative Text-Based Emojis">
     <meta property="og:description" content="Discover a fun collection of Kao Emojis, text-based emoticons, and creative expressions. Easily copy and share your favorite emojis!">
     <meta property="og:image" content="https://www.getemoji.online/feature.png">
     <meta property="og:url" content="http://www.getemoji.online/">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
+    <meta name="twitter:title" content="Kaomoji - Fun and Creative Text-Based Emojis">
     <meta name="twitter:description" content="Explore a wide range of Kao Emojis for fun conversations, memes, and social media posts. Copy your favorite emojis with a click!">
     <meta name="twitter:image" content="https://www.getemoji.online/feature.png">
     <meta name="robots" content="index, follow">
@@ -20,7 +20,7 @@
         {
             "@context": "http://schema.org",
             "@type": "WebPage",
-            "name": "KaoEmoji | GetEmoji.Online",
+            "name": "Kaomoji | GetEmoji.Online",
             "description": "Discover Kao Emojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!",
             "url": "http://www.getemoji.online/",
             "image": "https://www.getemoji.online/feature.png",
@@ -32,7 +32,7 @@
         }
     </script>
 
-    <title>KaoEmoji - Fun and Creative Text-Based Emojis | GetEmoji.Online </title>
+    <title>Kaomoji - Fun and Creative Text-Based Emojis | GetEmoji.Online </title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -47,7 +47,7 @@
 <!-- Updated Navbar Section (Dark Themed) -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="https://www.getemoji.online/">KaoEmoji</a>
+        <a class="navbar-brand" href="https://www.getemoji.online/">Kaomoji</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -73,7 +73,7 @@
 
     <!-- Header Section -->
     <header class="header">
-        <h1>Welcome to Positive KaoEmojis</h1>
+        <h1>Welcome to Positive Kaomojis</h1>
         <p>Your ultimate destination for Kao Emojis, fun expressions, and creative text art!</p>
     </header>
 
@@ -83,50 +83,50 @@
     <div class="row">
         <!-- First Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="/positive/joy.html" class="btn btn-primary w-100">Joy KaoEmojis </a>
+            <a href="/positive/joy.html" class="btn btn-primary w-100">Joy Kaomojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="/positive/gratitude.html" class="btn btn-primary w-100">Gratitude KaoEmojis </a>
+            <a href="/positive/gratitude.html" class="btn btn-primary w-100">Gratitude Kaomojis </a>
         </div>
     </div>
     
     <div class="row">
         <!-- Second Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="/positive/pride.html" class="btn btn-primary w-100">Pride KaoEmojis </a>
+            <a href="/positive/pride.html" class="btn btn-primary w-100">Pride Kaomojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="/positive/appreciation.html" class="btn btn-primary w-100">Appreciation KaoEmojis </a>
+            <a href="/positive/appreciation.html" class="btn btn-primary w-100">Appreciation Kaomojis </a>
         </div>
     </div>
 
     <div class="row">
         <!-- Third Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="/positive/interest.html" class="btn btn-primary w-100">Interest KaoEmojis </a>
+            <a href="/positive/interest.html" class="btn btn-primary w-100">Interest Kaomojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="/positive/peaceful.html" class="btn btn-primary w-100">Peaceful KaoEmojis </a>
+            <a href="/positive/peaceful.html" class="btn btn-primary w-100">Peaceful Kaomojis </a>
         </div>
     </div>
 
     <div class="row">
         <!-- Fourth Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="/positive/excitment.html" class="btn btn-primary w-100">Excitement KaoEmojis </a>
+            <a href="/positive/excitment.html" class="btn btn-primary w-100">Excitement Kaomojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="/positive/love.html" class="btn btn-primary w-100">Love KaoEmojis </a>
+            <a href="/positive/love.html" class="btn btn-primary w-100">Love Kaomojis </a>
         </div>
     </div>
 
     <div class="row">
         <!-- Fifth Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="/positive/confidence.html" class="btn btn-primary w-100">Confidence KaoEmojis </a>
+            <a href="/positive/confidence.html" class="btn btn-primary w-100">Confidence Kaomojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="/positive/surprise.html" class="btn btn-primary w-100">Surprise KaoEmojis </a>
+            <a href="/positive/surprise.html" class="btn btn-primary w-100">Surprise Kaomojis </a>
         </div>
     </div>
 </div>
@@ -185,7 +185,7 @@
 
     <!-- Emoji Grid (Unchanged) -->
  <div class="container mt-4" id="emojis">
- <h2 class="text-center mb-4">  Positive KaoEmojis Demo </h2>
+ <h2 class="text-center mb-4">  Positive Kaomojis Demo </h2>
 
 
         
@@ -196,63 +196,63 @@
 
 <div class="col-4">
   <div class="emoji-box">
-    <span class="emoji" title="Ecstatic face with sparkling eyes Kaoemoji">(*≧∇≦*)</span>
+    <span class="emoji" title="Ecstatic face with sparkling eyes Kaomoji">(*≧∇≦*)</span>
     <button onclick="copyEmoji('(*≧∇≦*)', this)">Copy</button>
     <div class="copy-alert">Copied!</div>
   </div>
 </div>
 <div class="col-4">
   <div class="emoji-box">
-    <span class="emoji" title="Excited face with closed eyes Kaoemoji">٩(｡•́‿•̀｡)۶</span>
+    <span class="emoji" title="Excited face with closed eyes Kaomoji">٩(｡•́‿•̀｡)۶</span>
     <button onclick="copyEmoji('٩(｡•́‿•̀｡)۶', this)">Copy</button>
     <div class="copy-alert">Copied!</div>
   </div>
 </div>
 <div class="col-4">
   <div class="emoji-box">
-    <span class="emoji" title="Cheerful face with hands up Kaoemoji">٩(◕‿◕｡)۶</span>
+    <span class="emoji" title="Cheerful face with hands up Kaomoji">٩(◕‿◕｡)۶</span>
     <button onclick="copyEmoji('٩(◕‿◕｡)۶', this)">Copy</button>
     <div class="copy-alert">Copied!</div>
   </div>
 </div>
 <div class="col-4">
   <div class="emoji-box">
-    <span class="emoji" title="Excited face with heart eyes Kaoemoji">(*´▽`*)</span>
+    <span class="emoji" title="Excited face with heart eyes Kaomoji">(*´▽`*)</span>
     <button onclick="copyEmoji('(*´▽`*)', this)">Copy</button>
     <div class="copy-alert">Copied!</div>
   </div>
 </div>
 <div class="col-4">
   <div class="emoji-box">
-    <span class="emoji" title="Joyful face with a wide smile Kaoemoji">٩(｡•̀‿•́｡)۶</span>
+    <span class="emoji" title="Joyful face with a wide smile Kaomoji">٩(｡•̀‿•́｡)۶</span>
     <button onclick="copyEmoji('٩(｡•̀‿•́｡)۶', this)">Copy</button>
     <div class="copy-alert">Copied!</div>
   </div>
 </div>
 <div class="col-4">
   <div class="emoji-box">
-    <span class="emoji" title="Smiling face with stars Kaoemoji">☆*:.｡.o(≧▽≦)o.｡.:*☆</span>
+    <span class="emoji" title="Smiling face with stars Kaomoji">☆*:.｡.o(≧▽≦)o.｡.:*☆</span>
     <button onclick="copyEmoji('☆*:.｡.o(≧▽≦)o.｡.:*☆', this)">Copy</button>
     <div class="copy-alert">Copied!</div>
   </div>
 </div>
 <div class="col-4">
   <div class="emoji-box">
-    <span class="emoji" title="Happy face with sparkling eyes Kaoemoji">(☆ω☆)</span>
+    <span class="emoji" title="Happy face with sparkling eyes Kaomoji">(☆ω☆)</span>
     <button onclick="copyEmoji('(☆ω☆)', this)">Copy</button>
     <div class="copy-alert">Copied!</div>
   </div>
 </div>
 <div class="col-4">
   <div class="emoji-box">
-    <span class="emoji" title="Excited and joyful face Kaoemoji">(o^▽^o)</span>
+    <span class="emoji" title="Excited and joyful face Kaomoji">(o^▽^o)</span>
     <button onclick="copyEmoji('(o^▽^o)', this)">Copy</button>
     <div class="copy-alert">Copied!</div>
   </div>
 </div>
 <div class="col-4">
   <div class="emoji-box">
-    <span class="emoji" title="Happy face with stars in eyes Kaoemoji">(*^▽^*)</span>
+    <span class="emoji" title="Happy face with stars in eyes Kaomoji">(*^▽^*)</span>
     <button onclick="copyEmoji('(*^▽^*)', this)">Copy</button>
     <div class="copy-alert">Copied!</div>
   </div>
@@ -285,7 +285,7 @@
 
     <!-- Footer Section -->
 <footer>
-    <p>&copy; 2024 KaoEmoji. All rights reserved.</p>
+    <p>&copy; 2024 Kaomoji. All rights reserved.</p>
     <p>
         <a href="/privacy-policy">Privacy Policy</a> | 
         <a href="/terms-of-service">Terms of Service</a> | 
