--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Discover Kaomojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!">
     <meta name="keywords" content="Kaomojis, emoji art, text emoticons, smileys, copy emojis, fun emojis, creative text art, cute emojis">
-    <meta property="og:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
+    <meta property="og:title" content="Kaomoji - Fun and Creative Text-Based Emojis">
     <meta property="og:description" content="Discover a fun collection of Kaomojis, text-based emoticons, and creative expressions. Easily copy and share your favorite emojis!">
     <meta property="og:image" content="https://www.getemoji.online/feature.png">
     <meta property="og:url" content="http://www.getemoji.online/">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
+    <meta name="twitter:title" content="Kaomoji - Fun and Creative Text-Based Emojis">
     <meta name="twitter:description" content="Explore a wide range of Kaomojis for fun conversations, memes, and social media posts. Copy your favorite emojis with a click!">
     <meta name="twitter:image" content="https://www.getemoji.online/feature.png">
     <meta name="robots" content="index, follow">
@@ -20,7 +20,7 @@
         {
             "@context": "http://schema.org",
             "@type": "WebPage",
-            "name": "KaoEmoji | GetEmoji.Online",
+            "name": "Kaomoji | GetEmoji.Online",
             "description": "Discover Kaomojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!",
             "url": "http://www.getemoji.online/",
             "image": "https://www.getemoji.online/feature.png",
@@ -32,7 +32,7 @@
         }
     </script>
 
-    <title>KaoEmoji - Fun and Creative Text-Based Emojis | GetEmoji.Online </title>
+    <title>Kaomoji - Fun and Creative Text-Based Emojis | GetEmoji.Online </title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -47,7 +47,7 @@
 <!-- Updated Navbar Section (Dark Themed) -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="https://www.getemoji.online/">KaoEmoji</a>
+        <a class="navbar-brand" href="https://www.getemoji.online/">Kaomoji</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -295,7 +295,7 @@
 
     <!-- Footer Section -->
 <footer>
-    <p>&copy; 2024 KaoEmoji. All rights reserved.</p>
+    <p>&copy; 2024 Kaomoji. All rights reserved.</p>
     <p>
         <a href="/privacy-policy">Privacy Policy</a> | 
         <a href="/terms-of-service">Terms of Service</a> | 
