--- a/blank.html
+++ b/blank.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Discover Kao Emojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!">
     <meta name="keywords" content="Kao Emojis, emoji art, text emoticons, smileys, copy emojis, fun emojis, creative text art, cute emojis">
-    <meta property="og:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
+    <meta property="og:title" content="Kaomoji - Fun and Creative Text-Based Emojis">
     <meta property="og:description" content="Discover a fun collection of Kao Emojis, text-based emoticons, and creative expressions. Easily copy and share your favorite emojis!">
     <meta property="og:image" content="https://www.getemoji.online/feature.png">
     <meta property="og:url" content="http://www.getemoji.online/">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="KaoEmoji - Fun and Creative Text-Based Emojis">
+    <meta name="twitter:title" content="Kaomoji - Fun and Creative Text-Based Emojis">
     <meta name="twitter:description" content="Explore a wide range of Kao Emojis for fun conversations, memes, and social media posts. Copy your favorite emojis with a click!">
     <meta name="twitter:image" content="https://www.getemoji.online/feature.png">
     <meta name="robots" content="index, follow">
@@ -20,7 +20,7 @@
         {
             "@context": "http://schema.org",
             "@type": "WebPage",
-            "name": "KaoEmoji | GetEmoji.Online",
+            "name": "Kaomoji | GetEmoji.Online",
             "description": "Discover Kao Emojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!",
             "url": "http://www.getemoji.online/",
             "image": "https://www.getemoji.online/feature.png",
@@ -32,7 +32,7 @@
         }
     </script>
 
-    <title>Blank KaoEmoji - Fun and Creative Text-Based Emojis | GetEmoji.Online</title>
+    <title>Blank Kaomoji - Fun and Creative Text-Based Emojis | GetEmoji.Online</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
 <!-- Updated Navbar Section (Dark Themed) -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="https://www.getemoji.online/">KaoEmoji</a>
+        <a class="navbar-brand" href="https://www.getemoji.online/">Kaomoji</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -70,7 +70,7 @@
 
 <!-- Header Section -->
 <header class="header">
-<h1>Welcome to Blank KaoEmojis World</h1>
+<h1>Welcome to Blank Kaomojis World</h1>
 <p>Your ultimate destination for Blank Kao Emojis, fun expressions, and creative text art!</p>
 </header>
 
@@ -81,10 +81,10 @@
     <div class="row">
         <!-- First Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="/positive/next.html" class="btn btn-primary w-100">Next KaoEmojis </a>
+            <a href="/positive/next.html" class="btn btn-primary w-100">Next Kaomojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="/positive/next.html" class="btn btn-primary w-100">Next KaoEmojis </a>
+            <a href="/positive/next.html" class="btn btn-primary w-100">Next Kaomojis </a>
         </div>
     </div>
 </div>
@@ -110,7 +110,7 @@
     
 <!-- Emoji Grid (Unchanged) -->
 <div class="container mt-4" id="emojis">
-<h2 class="text-center mb-4">Famous Blank KaoEmojis</h2>
+<h2 class="text-center mb-4">Famous Blank Kaomojis</h2>
 
 
 
@@ -126,7 +126,7 @@
   
 <!-- Footer Section -->
 <footer>
-    <p>&copy; 2024 KaoEmoji. All rights reserved.</p>
+    <p>&copy; 2024 Kaomoji. All rights reserved.</p>
     <p>
         <a href="/privacy-policy">Privacy Policy</a> | 
         <a href="/terms-of-service">Terms of Service</a> | 
@@ -136,7 +136,8 @@
 
     
 <!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1703046,"ffffff","e61c1c");</script><br><noscript><a href="https://www.supercounters.com/">free online counter</a></noscript>
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script>
+<script type="text/javascript">sc_online_i(1703046,"ffffff","e61c1c");</script><br><noscript><a href="https://www.supercounters.com/">free online counter</a></noscript>
 </center>
 <!-- END: Powered by Supercounters.com -->
 
