--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
     <div class="row">
         <!-- First Row of 3 Buttons -->
         <div class="col-md-4 mb-3">
-            <a href="/positive/" class="btn btn-primary w-100">Positive Kaomojis</a>
+            <a href="/pride-kaomojis.html" class="btn btn-primary w-100">Pride Kaomojis</a>
         </div>
         <div class="col-md-4 mb-3">
-            <a href="#" class="btn btn-primary w-100">Negative Kaomojis</a>
+            <a href="/gratitude-kaomojis.html" class="btn btn-primary w-100">Gratitude Kaomojis</a>
         </div>
         <div class="col-md-4 mb-3">
-            <a href="#" class="btn btn-primary w-100">Neutral Kaomojis</a>
+            <a href="/joy-kaomojis.html" class="btn btn-primary w-100">Joy Kaomojis</a>
         </div>
     </div>
     
