--- a/index.html
+++ b/index.html
@@ -84,9 +84,15 @@
         <p>Your ultimate destination for Kaomojis, fun expressions, and creative text art!</p>
     </header>
 
+
+     <!-- Kaomoji Category -->
+    <div class="container mt-4" id="emojis">
+    <h2 class="text-center mb-4">  Positive Kaomojis </h2>
+    </div>
+
+        
 <!-- Division Starts-->
 <div class="container mt-6">
-
 
     <div class="row">
         <!-- First Row of 3 Buttons -->
