--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="row">
         <!-- First Row of 3 Buttons -->
         <div class="col-md-4 mb-3">
-            <a href="/pride-kaomojis.html" class="btn btn-primary w-100">Pride Kaomojis</a>
+            <a href="/affection-kaomojis.html" class="btn btn-primary w-100">Affection Kaomojis</a>
         </div>
         <div class="col-md-4 mb-3">
             <a href="/gratitude-kaomojis.html" class="btn btn-primary w-100">Gratitude Kaomojis</a>
