--- a/blank.html
+++ b/blank.html
@@ -51,16 +51,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link active" href="/positive/index.html">Positive</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Online Emoji</a>
+                    <a class="nav-link " href="/negative/index.html">Negative</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ads</a>
+                    <a class="nav-link " href="/neutral/index.html">Neutral</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link " href="/various/index.html">Various</a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link " href="/animals/index.html">Animals</a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link " href="/others/index.html">Others</a>
                 </li>
             </ul>
         </div>
