--- a/affection-kaomojis.html
+++ b/affection-kaomojis.html
@@ -87,10 +87,10 @@
     <div class="row">
         <!-- First Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="/positive/next.html" class="btn btn-primary w-100">Next Kaomojis </a>
+            <a href="/positive/" class="btn btn-primary w-100">Positive Kaomojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="/positive/next.html" class="btn btn-primary w-100">Next Kaomojis </a>
+            <a href="/various/" class="btn btn-primary w-100">Various Kaomojis </a>
         </div>
     </div>
 </div>
