--- a/blank.html
+++ b/blank.html
@@ -76,7 +76,7 @@
 
 <!-- Header Section -->
 <header class="header">
-<h1>Welcome to Blank Kaomojis World</h1>
+<h1>Welcome to Blank Kaomojis </h1>
 <p>Your ultimate destination for Blank Kao Emojis, fun expressions, and creative text art!</p>
 </header>
 
