--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/positive/index.html">Positive</a>
+                    <a class="nav-link active" href="/positive/">Positive</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="/negative/index.html">Negative</a>
+                    <a class="nav-link " href="/negative/">Negative</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="/neutral/index.html">Neutral</a>
+                    <a class="nav-link " href="/neutral/">Neutral</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="/various/index.html">Various</a>
+                    <a class="nav-link " href="/various/">Various</a>
                 </li>
                  <li class="nav-item">
-                    <a class="nav-link " href="/animals/index.html">Animals</a>
+                    <a class="nav-link " href="/animals/">Animals</a>
                 </li>
                  <li class="nav-item">
-                    <a class="nav-link " href="/others/index.html">Others</a>
+                    <a class="nav-link " href="/others/">Others</a>
                 </li>
             </ul>
         </div>
