--- a/pride-kaomojis.html
+++ b/pride-kaomojis.html
@@ -32,8 +32,7 @@
         }
     </script>
 
-    <title>Pride Kaomoji - Fun and Creative Text-Based Emojis | GetEmoji.Online</title>
-
+    <title>Pride Kaomojis - Creative Text Emojis | GetEmoji.Online </title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://www.getemoji.online/stylee.css" rel="stylesheet">
