--- a/affection-kaomojis.html
+++ b/affection-kaomojis.html
@@ -32,8 +32,8 @@
         }
     </script>
 
-    <title>Affection Kaomoji - Fun and Creative Text-Based Emojis | GetEmoji.Online</title>
-
+    <title>Affection Kaomojis - Creative Text Emojis | GetEmoji.Online </title>
+    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://www.getemoji.online/stylee.css" rel="stylesheet">
