--- a/blank.html
+++ b/blank.html
@@ -32,7 +32,7 @@
         }
     </script>
 
-    <title>Kaomojis - Creative Text Emojis | GetEmoji.Online </title>
+    <title>Blank Kaomojis - Creative Text Emojis | GetEmoji.Online </title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://www.getemoji.online/stylee.css" rel="stylesheet">
@@ -50,22 +50,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/positive/index.html">Positive</a>
+                    <a class="nav-link active" href="/positive/">Positive</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="/negative/index.html">Negative</a>
+                    <a class="nav-link " href="/negative/">Negative</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="/neutral/index.html">Neutral</a>
+                    <a class="nav-link " href="/neutral/">Neutral</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="/various/index.html">Various</a>
+                    <a class="nav-link " href="/various/">Various</a>
                 </li>
                  <li class="nav-item">
-                    <a class="nav-link " href="/animals/index.html">Animals</a>
+                    <a class="nav-link " href="/animals/">Animals</a>
                 </li>
                  <li class="nav-item">
-                    <a class="nav-link " href="/others/index.html">Others</a>
+                    <a class="nav-link " href="/others/">Others</a>
                 </li>
             </ul>
         </div>
