--- a/index.html
+++ b/index.html
@@ -828,13 +828,16 @@
 
 <!-- Footer Section -->
 <footer>
-    <p>&copy; 2024 Kaomoji. All rights reserved.</p>
+    <p>&copy; 2024 Kaomoji | GetEmoji.Online - All rights reserved.</p>
     <p>
-        <a href="/privacy-policy">Privacy Policy</a> | 
-        <a href="/terms-of-service">Terms of Service</a> | 
-        <a href="/about-us">About Us</a>
+        <a href="/page/about.html">About Us</a> | 
+        <a href="/page/contact.html">Contact</a> | 
+        <a href="/page/disclaimer.html">Disclaimer</a>
+       <a href="/page/privacy.html">Privacy</a>
+       <a href="/page/terms-conditions.html">Terms & Conditions </a>
+
+
     </p>
-    
 </footer>
 
 
