--- a/blank.html
+++ b/blank.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Discover Kao Emojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!">
     <meta name="keywords" content="Kao Emojis, emoji art, text emoticons, smileys, copy emojis, fun emojis, creative text art, cute emojis">
-    <meta property="og:title" content="Kaomoji - Fun and Creative Text-Based Emojis">
+    <meta property="og:title" content="Kaomojis - Creative Text Emojis | GetEmoji.Online">
     <meta property="og:description" content="Discover a fun collection of Kao Emojis, text-based emoticons, and creative expressions. Easily copy and share your favorite emojis!">
-    <meta property="og:image" content="https://www.getemoji.online/feature.png">
+    <meta property="og:image" content="https://www.getemoji.online/image1.jpg">
     <meta property="og:url" content="http://www.getemoji.online/">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Kaomoji - Fun and Creative Text-Based Emojis">
+    <meta name="twitter:title" content="Kaomojis - Creative Text Emojis | GetEmoji.Online">
     <meta name="twitter:description" content="Explore a wide range of Kao Emojis for fun conversations, memes, and social media posts. Copy your favorite emojis with a click!">
-    <meta name="twitter:image" content="https://www.getemoji.online/feature.png">
+    <meta name="twitter:image" content="https://www.getemoji.online/image1.jpg">
     <meta name="robots" content="index, follow">
 
     <!-- Schema.org markup for Google+ -->
@@ -23,7 +23,7 @@
             "name": "Kaomoji | GetEmoji.Online",
             "description": "Discover Kao Emojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!",
             "url": "http://www.getemoji.online/",
-            "image": "https://www.getemoji.online/feature.png",
+            "image": "https://www.getemoji.online/image1.jpg",
             "publisher": {
                 "@type": "Organization",
                 "name": "GetEmoji.Online"
