--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Discover Kaomojis, a collection of fun and expressive text-based emoticons perfect for conversations and social media. Copy and share your favorite emojis easily!">
     <meta name="keywords" content="Kaomojis, emoji art, text emoticons, smileys, copy emojis, fun emojis, creative text art, cute emojis">
-    <meta property="og:title" content="Kaomoji - Fun and Creative Text-Based Emojis">
+    <meta property="og:title" content="Kaomojis - Creative Text Emojis | GetEmoji.Online">
     <meta property="og:description" content="Discover a fun collection of Kaomojis, text-based emoticons, and creative expressions. Easily copy and share your favorite emojis!">
-    <meta property="og:image" content="https://www.getemoji.online/feature.png">
+    <meta property="og:image" content="https://www.getemoji.online/image1.jpg">
     <meta property="og:url" content="http://www.getemoji.online/">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Kaomoji - Fun and Creative Text-Based Emojis">
+    <meta name="twitter:title" content="Kaomojis - Creative Text Emojis | GetEmoji.Online">
     <meta name="twitter:description" content="Explore a wide range of Kaomojis for fun conversations, memes, and social media posts. Copy your favorite emojis with a click!">
-    <meta name="twitter:image" content="https://www.getemoji.online/feature.png">
+    <meta name="twitter:image" content="https://www.getemoji.online/image1.jpg">
     <meta name="robots" content="index, follow">
 
     <!-- Schema.org markup for Google+ -->
