--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <a href="/affection-kaomojis.html" class="btn btn-primary w-100">Affection Kaomojis</a>
         </div>
         <div class="col-md-4 mb-3">
-            <a href="/gratitude-kaomojis.html" class="btn btn-primary w-100">Gratitude Kaomojis</a>
+            <a href="/admiration-kaomojis.html" class="btn btn-primary w-100">Admiration Kaomojis</a>
         </div>
         <div class="col-md-4 mb-3">
             <a href="/joy-kaomojis.html" class="btn btn-primary w-100">Joy Kaomojis</a>
