--- a/admiration-kaomojis.html
+++ b/admiration-kaomojis.html
@@ -684,10 +684,10 @@
     <!-- Add Images -->
     <div class="row">
         <div class="col-md-6">
-            <img src="https://www.getemoji.online/image1.jpg" alt="Kaomojis Collection" class="img-fluid">
+            <img src="https://www.getemoji.online/image1.jpg" alt="Positive Admiring kaomoji" class="img-fluid">
         </div>
         <div class="col-md-6">
-            <img src="https://www.getemoji.online/image2.jpg" alt="Fun Kaomojis in Action" class="img-fluid">
+            <img src="https://www.getemoji.online/image2.jpg" alt="Various Admiring kaomoji" class="img-fluid">
         </div>
     </div>
 </div>
