--- a/blank.html
+++ b/blank.html
@@ -86,10 +86,10 @@
     <div class="row">
         <!-- First Row of 2 Buttons -->
         <div class="col-md-6 mb-3">
-            <a href="/positive/" class="btn btn-primary w-100">Positive Kaomojis </a>
+            <a href="https://www.getemoji.online/random.html" class="btn btn-primary w-100">Cute Kaomojis </a>
         </div>
         <div class="col-md-6 mb-3">
-            <a href="/various/" class="btn btn-primary w-100">Various Kaomojis </a>
+            <a href=https://www.getemoji.online/random.html" class="btn btn-primary w-100">More Kaomojis </a>
         </div>
     </div>
 </div>
