--- a/quiz.html
+++ b/quiz.html
@@ -87,20 +87,16 @@
             if (index % 4 === 0 && index !== 0) {
                 quizContainer.innerHTML += `
                     <div class="ad-slot">
-                       
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
-     crossorigin="anonymous"></script>
-<!-- URL Ads -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-5525538810839147"
-     data-ad-slot="2116224617"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-  
+                       &lt;center&gt;&lt;script type=&quot;text/javascript&quot;&gt;
+google_ad_client = &quot;ca-pub-5525538810839147&quot;;
+google_ad_host = &quot;pub-5525538810839147&quot;;
+/* DisplayAds1 */
+google_ad_slot = &quot;DisplayAds1&quot;;
+google_ad_width = 728;
+google_ad_height = 90;
+&lt;/script&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;//pagead2.googlesyndication.com/pagead/show_ads.js&quot;&gt;
+&lt;/script&gt;&lt;/center&gt;
                     </div>
                 `;
             }
